# c-database

./: .gitignore  CMakeLists.txt
client/: client.c  client.h
data/: registered_users.txt
fileio/: fileio.c  fileio.h
server/: server.c  server.h
structures/: array_list.c  array_list.h  linked_list.c  linked_list.h
table/: table.c  table.h
user/: server_user.c  server_user.h  user.c  user.h
